# greentic-e2e

./: .gitignore  .secrets-example  .secrets-provider.example  .secrets-providers.example  CLAUDE.md  README.md
.github/workflows/: cloud-demo-e2e.yml  demo-playwright.yml  nightly-e2e.yml  provider-e2e.yml  webchat-attachments-e2e.yml  webchat-passthrough-e2e.yml
ci/: run_actions.sh
docs/aws/: cloud-demo-e2e-iam-policy.json  cloud-demo-e2e-iam-policy.md
examples/: hello-world.ygtc
fixtures/bundles/: e2e-provider-bundle.yaml
fixtures/packs/extensions-passthrough-probe/components/extensions-probe/: Cargo.toml  README.md  component.manifest.json  rust-toolchain.toml
fixtures/packs/extensions-passthrough-probe/components/extensions-probe/src/: i18n_bundle.rs  lib.rs
fixtures/setup-answers/: all-events.json  all-messaging.json  all-providers.json  events-dummy.json  events-email-sendgrid.json  events-sms-twilio.json  events-timer.json  events-webhook.json  messaging-dummy.json  messaging-email.json  messaging-slack.json  messaging-teams.json  messaging-telegram.json  messaging-webchat-gui.json  messaging-webex.json  messaging-whatsapp.json  providers-combined.json
fixtures/wizard-answers/: e2e-dummy-bundle.json  e2e-events-provider.json  e2e-messaging-provider.json  extensions-passthrough-bundle.json  (+4 more)
playwright/: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json
scripts/: run_cloud_demo_e2e.sh  run_oauth_card_e2e.sh  run_provider_e2e.sh  run_webchat_attachments_e2e.sh  run_webchat_passthrough_e2e.sh
(+78 files in other folders)
