[package]
name = "extensions-probe"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.95"
description = "Greentic component extensions-probe — echoes received input back as JSON in `text`"
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.greentic]
abi_version = "0.6.0"

[package.metadata.component]
package = "greentic:component"

[package.metadata.component.target]
world = "greentic:component/component@0.6.0"

[dependencies]
greentic-types = { version = "0.5" }
greentic-interfaces-guest = { version = "0.5", default-features = false, features = ["component-v0-6"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
greentic-types = { version = "0.5" }
serde_json = "1"
